--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,7 @@ url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 # Output options (more information on Jekyll's site)
 timezone: "America/Vancouver"
 markdown: kramdown
+gems: [jekyll-paginate]
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
