--- a/_config.yml
+++ b/_config.yml
@@ -37,19 +37,19 @@ navbar-links:
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: Rob Patro 
   email: "youremail@domain.com"
   facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
+  github: github.com/COMBINE-lab # eg. daattali
+  twitter: nomad421 # eg. daattali
   linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
   stackoverflow: yourlink  # eg. "3943160/daattali"
  
 # Select which links to show in the footer
 footer-links-active:
   rss: false
-  facebook: true
-  email: true
+  facebook: false 
+  email: false 
   twitter: true
   github: true
   linkedin: false
@@ -57,7 +57,7 @@ footer-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "COMBINE-lab.github.io"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Misc --- #
 
