--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: A virtual proof that name is awesome!
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/combine_lab_logo.png"
 
 # List of links in the navigation bar
 navbar-links:
