--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ navbar-links:
   Home: ""
   Software: "software"
   About the lab: "aboutus"
+  Prospective members: "joining"
   #Author's home: "http://deanattali.com"
   
 # --- Footer options --- #
